--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    padding: 0 25px;
+    padding: 0 ;
     
 }
 nav>ul{
@@ -29,3 +29,76 @@ nav>ul{
 .header{
     background-color: #FFF4E7;
 }
+.banner{
+    text-align: center;
+    margin-top: 100px;
+}
+.banner-title{
+    height: 180px;
+    font-weight: 700;
+    font-size: 64px;
+    color: #131313;
+}
+.banner-desc{
+    width: 866px;
+    margin-left: 130px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    color: #727272;
+    margin-bottom: 20px;
+}
+.btn{
+    width: 180px;
+    height: 50px;
+    font-size: 20px;
+    line-height: 23px;
+    font-weight: 600;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 10px;
+    background-color: #FF900E;
+    margin-bottom: 50px;
+}
+.banner-img{
+    width: 1140px;
+    margin-bottom: 50px;
+}
+.features{
+    display: flex;
+    gap: 70px;
+    margin-top: 50px;
+}
+.feature-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.feature-img img{
+    width: 342px;
+    height: 342px;
+    border-radius: 8px;
+}
+.feature-main{
+    width: 530px;
+    margin: auto;
+}
+.feature-title{
+    width: 360px;
+    height: 100px;
+    font-size: 45px;
+    font-weight: 500;
+    line-height: 50px;
+}
+.feature-desc{
+    font-size: 16px;
+    line-height: 26px;
+    color: #727272;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+
+   
+    
+   
