--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,8 @@ nav>ul{
     width: 1140px;
     margin-bottom: 50px;
 }
+
+/* feature style*/
 .features{
     display: flex;
     gap: 70px;
@@ -98,7 +100,133 @@ nav>ul{
     padding-bottom: 20px;
     
 }
+/*extra feature style*/
+.extra-feature{
+    display: flex;
+    gap: 50px;
+    margin-top: 100px;
+    
+}
+.feature-line{
+    margin-bottom: 30px;
+}
 
+.extra-title{
+    font-size: 45px;
+    font-weight: 700;
+    line-height: 53px;
+    color: #131313;
+    margin-top: 20px;
+    border-left: 6px solid #FF900E;
+}
+.extra-desc{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    color: #727272;
+    margin-top: 10px;
+}
+.version{
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    gap: 20px;
+}
+.version-main{
+    width: 540px;
+    height: 150px;
+    box-shadow: 0px 0px 2px 0px;
+    border-radius: 5px;
+    padding-left: 20px;
+}
    
+.version-title{
+    font-size: 20px;
+    font-weight: 600;
+    color: #131313;
+    padding-top: 20px;
+}
+
+.extra-img img{
+    width: 620px;
+}
+.extra-btn{
+    width: 200px;
+    height: 120px;
+    font-size: 30px;
+    font-weight: 700;
+    background-color: #FF900E;
+    color: #FFFFFF;
+    margin-left: 560px;
+    margin-top: -100px;
+    
+}
+.exp{
+    font-size: 16px;
+}
+/* fact style*/
+.factss{
+    margin-top: 100px;
+}
+.facts{
+    margin-bottom: 100px;
+}
+.facts-title{
+    font-size: 40px;
+    font-weight: 700;
+    color: #131313;
+}
+.fact{
+    width: 542px;
+}
+.client-work{
+    display: flex;
+    justify-content: space-around;
+}
+.awards{
+    width: 200px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
+    transition: background-color 2s ease out;
+}
+.awards:hover{
+    background-color: #FF900E;
+    cursor: pointer;
+}
+.awards img{
+    width: 45px;
+    height: 45px;
+}
+.number{
+    
+    font-size: 45px;
+}
+/* sponspors style*/
+.sponsors{
+    text-align: center;
+    margin-top: 100px;
+}
+.sponsor-title{
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+}
+.sponsor-desc{
+    font-weight: 400;
+    font-size: 16px;
+    padding-top: 20px;
+    
+    color: #727272;
+}
+.companys{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
+.companys img{
+   filter: grayscale(100%);
+}
+
     
    
