--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ nav>ul{
     gap: 20px;
 }
 .feature-img img{
+    max-width: 100%;
     width: 342px;
     height: 342px;
     border-radius: 8px;
@@ -229,9 +230,12 @@ nav>ul{
 
 /*bonus section style*/
 .bonus{
-    background-image: url('\\images\\car.jpg'),linear-gradient(0deg, #131313 0%, rgba(241, 91, 34, 0) 50%);
+    background-image: url('//images/car.jpg'),linear-gradient(0deg, #131313 0%, rgba(241, 91, 34, 0) 50%);
     background-blend-mode: overlay;
-    opacity: 1;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    opacity: 2;
     height: 100vh;
     padding-top: 100px;
     margin-top: 50px;
@@ -248,5 +252,51 @@ nav>ul{
     margin-top: 50px;
 }
 
-    
+
+/*media query*/
+@media screen and (max-width:767px) {
+    .banner{
+        margin-top: 0px;
+        
+    }
+    .banner-title{
+        margin-bottom: 100px;
+    }
+    .banner-img{
+        width: 100%;
+    }
    
+    .features{
+       display: grid;
+       grid-template-rows: repeat(1, 1fr);
+    }
+   
+    .feature-img img{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        
+    }
+    .factss{
+        text-align: center;
+    }
+    .client-work{
+        display: grid;
+        grid-template-rows: repeat(1. 1fr);
+        gap: 10px;
+    }
+    .companys{
+        display: grid;
+        grid-template-rows: repeat(1, 1fr);
+        justify-content: center;
+        gap: 20px;
+    }
+    .bonus{
+        width: 100%;
+    }
+    .extra-feature{
+        display: grid;
+        grid-template-rows: repeat(1, 1fr);
+        text-align: center;
+        
+}
