--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ nav>ul{
 
 
 /*media query*/
-@media screen and (max-width:767px) {
+@media screen and (max-width:576px) {
     .header{
         width: 100%;
     }
@@ -274,10 +274,12 @@ nav>ul{
        grid-template-rows: repeat(1, 1fr);
     }
     .feature-img{
+        width: 100%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        margin: auto;
-        gap: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
     }
    
     
@@ -287,6 +289,10 @@ nav>ul{
     .feature-title{
         width: 100%;
         text-align: center;
+    }
+    .extra-feature{
+       width: 100%;
+       justify-content: center;
     }
     .extra-title{
         width: 100%;
@@ -303,11 +309,14 @@ nav>ul{
         margin-top: -100px;
         
     }
+    .extra-img img{
+        width: 100%;
+    }
     .extra-btn{
         margin: auto;
-        margin-left: 270px;
-       margin-top: 100px;
-       border: none;
+        margin-top: 100px;
+        margin-left: 170px;
+        border: none;
        
     }
     .factss{
@@ -321,7 +330,7 @@ nav>ul{
         justify-content: center;
     }
     .fact{
-        margin-left: 100px;
+       width: 100%;
     }
     .client-work{
         display: grid;
