--- a/css/style.css
+++ b/css/style.css
@@ -357,8 +357,8 @@ nav>ul{
         grid-template-rows: repeat(1, 1fr);
         gap: 20px;
     }
-    .version-main{
-        
+    .extra-img{
+        width: 100%;
     }
     .fact{
        width: 100%;
