--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ nav>ul{
 
 /*media query*/
 @media screen and (max-width:480px) {
+   
     .header{
         width: 100%;
     }
@@ -320,8 +321,7 @@ nav>ul{
     }
     
     .extra-desc{
-        width: 90%;
-
+        width: 100%;
     }
     .extra-feature{
        width: 100%;
@@ -338,7 +338,7 @@ nav>ul{
     }
    
     .extra-img img{
-        width: 100%;
+        width: 80%;
     }
     .extra-btn{
         margin: auto;
@@ -352,16 +352,20 @@ nav>ul{
        
     }
     .version{
-        width: 70%;
+        width: 100%;
         display: grid;
         grid-template-rows: repeat(1, 1fr);
-        gap: 20px;
+    }
+    .version-main{
+        width: 100%;
+        
     }
     .extra-img{
         width: 100%;
     }
     .fact{
-       width: 100%;
+       width: 80%;
+       margin-left: 30px;
     }
     .client-work{
         display: grid;
